Update email id

--- a/index.html
+++ b/index.html
@@ -85,11 +85,8 @@
           <strong>Pro Placements</strong>
           <br>Cochin, Kerala
           <br>Kakkanad, 682030
+          <br>proplacementscochin@gmail.com
           <br>
-        </address>
-        <address>
-          <abbr title="Email">E:</abbr>
-          <a href="mailto:#">proplacements@gmail.com</a>
         </address>
       </div>
     </div>
